Fix the spacing on footer

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -28,6 +28,7 @@
   }
   &__text-content__decription {
     margin-top: 90px;
+    margin-bottom: 90px;
     color: $black;
     font-family: "Gilroy-light", sans-serif;
     font-size: 22px;
